@@ -223,7 +223,8 @@ time_format=%H:%M GMT
 use_gmt=1
 quotes_per_page=10
 recent_news_items=3
-public_moderation_queue=1
+moderation_queue_public=1
+tag_cloud_logarithmic=1
 webapp.webmaster_name=John Doe
 webapp.webmaster_email=you@yourserver.com
 webapp.site_url=http://www.yourserver.com/cgi-bin/chirpy
