@@ -13,6 +13,8 @@
 * You can now edit quotes before approving them
 * Added wildcard searching
 * Made tag cloud ignore unapproved quotes
+* Tag cloud can now use logarithmic calculation, to make tag use distribution
+  appear more even
 * Added dynamic tag cloud pruning based on number of quotes
 * Administrative interface now only displays tabs that are available
 * Made pages point to their own feeds instead of QotW (where applicable)
